--- a/app.env
+++ b/app.env
@@ -1,4 +1,5 @@
 DB_DRIVER = postgres
 DB_SOURCE = postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
 SERVER_ADDRESS = 0.0.0.0:8888
-TOKEN_SYMMETRIC_KEY = 1234345456787567898766545678987
+TOKEN_SYMMETRIC_KEY = 12343454567875678987665456789872
+ACCESS_TOKEN_DURATION = 15m
